--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
 			<version>1.3</version>
 			<scope>test</scope>			
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.4.2</version>
+		</dependency>
 
 	</dependencies>
 
