--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -1,3 +1,4 @@
 # Sources:
 
-write-swissbib-searchengine org.swissbib.linked.mf.writer.SearchEngineWriter
+write-swissbib-searchengine org.swissbib.linked.mf.es.writer.SearchEngineWriter
+write-swissbib-sparql org.swissbib.linked.mf.sparql.writer.SparqlWriter
