additional single line writer (very quick prototype)

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -2,3 +2,4 @@
 
 write-swissbib-searchengine org.swissbib.linked.mf.es.writer.SearchEngineWriter
 write-swissbib-sparql org.swissbib.linked.mf.sparql.writer.SparqlWriter
+write-rdf-1line org.swissbib.linked.mf.sparql.writer.SingleLineWriter
