--- a/src/main/resources/itemLinks/AlephNetworks.properties
+++ b/src/main/resources/itemLinks/AlephNetworks.properties
@@ -1,4 +1,4 @@
-
+IDSBB http://aleph.unibas.ch,DSV01
 IDSSG http://aleph.unisg.ch,HSB01
 IDSSG2 http://aleph.unisg.ch,HSB02
 IDSLU  http://ilu.zhbluzern.ch,ILU01
