--- a/src/main/resources/itemLinks/Backlinks.properties
+++ b/src/main/resources/itemLinks/Backlinks.properties
@@ -1,5 +1,6 @@
 
-ALEPH  "{server}/F?func=item-global&doc_library={bib-library-code}&doc_number={bib-system-number}&sub_library={aleph-sublibrary-code}"
+#ALEPH  "{server}/F?func=item-global&doc_library={bib-library-code}&doc_number={bib-system-number}&sub_library={aleph-sublibrary-code}"
+ALEPH  "%s/F?func=item-global&doc_library=%s&doc_number=%s&sub_library=%s"
 VIRTUA  "{server}/cgi-bin/gw/chameleon?lng={language-code}&inst=consortium&skin=portal&search=KEYWORD&function=INITREQ&t1={bib-system-number}&u1=12101"
 RERO  "{server}/gateway?beginsrch=1&lng={language-code}&inst={RERO-network-code}&search=KEYWORD&function=INITREQ&fltset=submsn&t1={bib-system-number}&u1=12&floc={sub-library-code}0000"
 SNL  "{server}/cgi-bin/gw/chameleon?lng={language-code}&inst=consortium&search=KEYWORD&function=INITREQ&t1={bib-system-number}&u1=12101"
