enhancements for item endpoint

--- a/src/main/resources/itemLinks/AlephNetworks.properties
+++ b/src/main/resources/itemLinks/AlephNetworks.properties
@@ -1,5 +1,5 @@
-IDSBB http://aleph.unibas.ch,DSV01
-IDSSG http://aleph.unisg.ch,HSB01
+#IDSBB http://aleph.unibas.ch,DSV01
+#IDSSG http://aleph.unisg.ch,HSB01
 IDSSG2 http://aleph.unisg.ch,HSB02
 IDSLU  http://ilu.zhbluzern.ch,ILU01
 SGBN  http://aleph.sg.ch,SGB01
