--- a/src/main/resources/itemLinks/Backlinks.properties
+++ b/src/main/resources/itemLinks/Backlinks.properties
@@ -7,7 +7,11 @@ SNL  "{server}/cgi-bin/gw/chameleon?lng={language-code}&inst=consortium&search=K
 ALEX  "{server}/primo_library/libweb/action/dlSearch.do?institution=BIG&vid=ALEX&scope=default_scope&query=lsr07,contains,vtls{bib-system-number}-41big_inst"
 CCSA  "{server}/cgi-bin/gw/chameleon?lng={language-code}&inst=consortium&skin=affiches&search=KEYWORD&function=INITREQ&t1={bib-system-number}&u1=12101"
 CHARCH  "{server}/detail.aspx?ID={bib-system-number}"
-IDSSG  "{server}/php/bib_holdings.php?docnr={bib-system-number}"
-IDSBB  "http://baselbern.swissbib.ch/Record/{id}?expandlib={sub-library-code}#holding-institution-{network}-{sub-library-code}"
+#IDSSG  "http://aleph.unisg.ch/php/bib_holdings.php?docnr={bib-system-number}"
+IDSSG  "http://aleph.unisg.ch/php/bib_holdings.php?docnr=%s"
+#IDSBB  "http://baselbern.swissbib.ch/Record/{id}?expandlib={sub-library-code}#holding-institution-{network}-{sub-library-code}"
+IDSBB  "http://baselbern.swissbib.ch/Record/%s?expandlib=%s#holding-institution-%s-%s"
+#NEBIS  "http://recherche.nebis.ch/primo_library/libweb/action/display.do?tabs=locationsTab&ct=display&fn=search&doc=ebi01_prod{bib-system-number}&indx=1&recIds=ebi01_prod{bib-system-number}&recIdxs=0&elementId=0&renderMode=poppedOut&displayMode=full&frbrVersion=&dscnt=0&scp.scps=scope%3A%28ebi01_prod%29&frbg=&tab=default_tab&vl%28585331958UI1%29=all_items&srt=rank&mode=Basic&dum=true&tb=t&vid=NEBIS"
+#because of the super fantastic Nebis URL we can't use the default java format mechanism with %s
 NEBIS  "http://recherche.nebis.ch/primo_library/libweb/action/display.do?tabs=locationsTab&ct=display&fn=search&doc=ebi01_prod{bib-system-number}&indx=1&recIds=ebi01_prod{bib-system-number}&recIdxs=0&elementId=0&renderMode=poppedOut&displayMode=full&frbrVersion=&dscnt=0&scp.scps=scope%3A%28ebi01_prod%29&frbg=&tab=default_tab&vl%28585331958UI1%29=all_items&srt=rank&mode=Basic&dum=true&tb=t&vid=NEBIS"
 
