--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -1,5 +1,5 @@
 # Sources:
 
-write-swissbib-searchengine org.swissbib.linked.mf.es.writer.SearchEngineWriter
-write-swissbib-sparql org.swissbib.linked.mf.sparql.writer.SparqlWriter
-write-rdf-1line org.swissbib.linked.mf.sparql.writer.SingleLineWriter
+write-swissbib-searchengine org.swissbib.linked.mf.writer.es.SearchEngineWriter
+write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
+write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
