--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -4,6 +4,7 @@ write-swissbib-searchengine org.swissbib.linked.mf.writer.es.SearchEngineWriter
 write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
 write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
 write-jsonld org.swissbib.linked.mf.writer.WriteJsonLd
+write-esbulk org.swissbib.linked.mf.writer.ESBulkAPIEncoder
 # Todo: stream-to-jsonld org.swissbib.linked.mf.writer.StreamToJsonLd
 # Todo: stream-to-es org.swissbib.linked.mf.writer.StreamToES
 # Todo: stream-to-sesame org.swissbib.linked.mf.writer.StreamToSesame
