--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
             <artifactId>sesame-rio-rdfxml</artifactId>
             <version>2.8.3</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>5.2.1</version>
+		</dependency>
 <!--        <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-runtime</artifactId>
