--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -5,6 +5,5 @@ write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
 write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
 write-jsonld org.swissbib.linked.mf.writer.WriteJsonLd
 write-esbulk org.swissbib.linked.mf.writer.ESBulkAPIEncoder
-# Todo: stream-to-jsonld org.swissbib.linked.mf.writer.StreamToJsonLd
-# Todo: stream-to-es org.swissbib.linked.mf.writer.StreamToES
+upload-esbulk org.swissbib.linked.mf.writer.ESBulkUpload
 # Todo: stream-to-sesame org.swissbib.linked.mf.writer.StreamToSesame
