Three new / renamed classes for encoding, writing and indexing Elasticsearch Bulk API compliant strings

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -3,7 +3,6 @@
 write-swissbib-searchengine org.swissbib.linked.mf.writer.es.SearchEngineWriter
 write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
 write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
-write-jsonld org.swissbib.linked.mf.writer.WriteJsonLd
-write-esbulk org.swissbib.linked.mf.writer.ESBulkAPIEncoder
-upload-esbulk org.swissbib.linked.mf.writer.ESBulkUpload
-# Todo: stream-to-sesame org.swissbib.linked.mf.writer.StreamToSesame
+write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
+encode-esbulk org.swissbib.linked.mf.writer.ESBulkEncoder
+index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
