Refactored classes RDFXmlWriterTrigger and SingleLineWriterRDFXml

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -6,3 +6,4 @@ write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
 write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
 encode-esbulk org.swissbib.linked.mf.writer.ESBulkEncoder
 index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
+write-rdf-trigger org.swissbib.linked.mf.writer.RDFXmlWriterTrigger
