create additional backlinks

--- a/src/main/resources/itemLinks/AlephNetworks.properties
+++ b/src/main/resources/itemLinks/AlephNetworks.properties
@@ -7,3 +7,4 @@ BGR  http://aleph.gr.ch,BGR01
 SBT  http://aleph.sbt.ti.ch,SBT01
 ABN  http://aleph.ag.ch,ABN01
 LIBIB  http://aleph.lbfl.li,LLB01
+NEBIS   http://opac.nebis.ch,EBI01
