--- a/src/main/resources/itemLinks/VirtuaNetworks.properties
+++ b/src/main/resources/itemLinks/VirtuaNetworks.properties
@@ -1,6 +1,6 @@
 
-RERO http://opac.rero.ch,?
-SNL http://opac.admin.ch,?
-ALEX  http://www.alexandria.ch,?
+# RERO http://opac.rero.ch,?
+#SNL http://opac.admin.ch,?
+#ALEX  http://www.alexandria.ch,?
 CCSA  http://ccsa.admin.ch,?
 CHARCH  https://www.helveticarchives.ch,?
