Experimental class ESBulkEncoderNG added

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -7,3 +7,5 @@ write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
 encode-esbulk org.swissbib.linked.mf.writer.ESBulkEncoder
 index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
 write-rdf-trigger org.swissbib.linked.mf.writer.RDFXmlWriterTrigger
+rdfxml-to-jsonld org.swissbib.linked.mf.pipe.RdfXml2JsonLd
+encode-esbulk-ng org.swissbib.linked.mf.writer.ESBulkEncoderNG
