New command split-entities

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -7,4 +7,5 @@ write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
 encode-esbulk org.swissbib.linked.mf.writer.ESBulkEncoder
 index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
 write-rdf-trigger org.swissbib.linked.mf.writer.RDFXmlWriterTrigger
-encode-esbulk-ng org.swissbib.linked.mf.writer.ESBulkEncoderNG
+encode-esbulk-ng org.swissbib.linked.mf.pipe.ESBulkEncoderNG
+split-entities org.swissbib.linked.mf.pipe.EntitySplitter
