--- a/pom.xml
+++ b/pom.xml
@@ -150,14 +150,20 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>1.4.2</version>
+            <version>2.0.0</version>
         </dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
-
+		<!-- Explicitly provided in order to prevent exceptions using the somewhat outdated version which metafacture
+		depends on -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.6.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.solr</groupId>
