Encoder and decoder for N-Triples serialization added.

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -4,8 +4,9 @@
 #write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
 write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
 write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
-encode-esbulk org.swissbib.linked.mf.writer.ESBulkEncoder
 index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
 write-rdf-trigger org.swissbib.linked.mf.writer.RDFXmlWriterTrigger
-encode-esbulk-ng org.swissbib.linked.mf.pipe.ESBulkEncoderNG
+encode-esbulk org.swissbib.linked.mf.pipe.ESBulkEncoder
 split-entities org.swissbib.linked.mf.pipe.EntitySplitter
+decode-ntriples org.swissbib.linked.mf.decoder.NtriplesDecoder
+encode-ntriples org.swissbib.linked.mf.pipe.NtriplesEncoder
