--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -2,12 +2,11 @@
 
 #write-swissbib-searchengine org.swissbib.linked.mf.writer.es.SearchEngineWriter
 #write-swissbib-sparql org.swissbib.linked.mf.writer.sparql.SparqlWriter
-write-rdf-1line org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
-write-esbulk org.swissbib.linked.mf.writer.ESBulkWriter
-index-esbulk org.swissbib.linked.mf.writer.ESBulkIndexer
-write-rdf-trigger org.swissbib.linked.mf.writer.RDFXmlWriterTrigger
-encode-esbulk org.swissbib.linked.mf.pipe.ESBulkEncoder
-split-entities org.swissbib.linked.mf.pipe.EntitySplitter
-decode-ntriples org.swissbib.linked.mf.decoder.NtriplesDecoder
-encode-ntriples org.swissbib.linked.mf.pipe.NtriplesEncoder
-update-es-id org.swissbib.linked.mf.pipe.ESIdUpdate
+write-rdf-1line=org.swissbib.linked.mf.writer.SingleLineWriterRDFXml
+write-esbulk=org.swissbib.linked.mf.writer.ESBulkWriter
+index-esbulk=org.swissbib.linked.mf.writer.ESBulkIndexer
+encode-esbulk=org.swissbib.linked.mf.pipe.ESBulkEncoder
+split-entities=org.swissbib.linked.mf.pipe.EntitySplitter
+decode-ntriples=org.swissbib.linked.mf.decoder.NtriplesDecoder
+encode-ntriples=org.swissbib.linked.mf.pipe.NtriplesEncoder
+update-es-id=org.swissbib.linked.mf.pipe.ESIdUpdate
