--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -10,3 +10,4 @@ split-entities=org.swissbib.linked.mf.pipe.EntitySplitter
 decode-ntriples=org.swissbib.linked.mf.decoder.NtriplesDecoder
 encode-ntriples=org.swissbib.linked.mf.pipe.NtriplesEncoder
 update-es-id=org.swissbib.linked.mf.pipe.ESIdUpdate
+lookup-es=org.swissbib.linked.mf.pipe.ESLookup
