--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -11,3 +11,4 @@ decode-ntriples=org.swissbib.linked.mf.decoder.NtriplesDecoder
 encode-ntriples=org.swissbib.linked.mf.pipe.NtriplesEncoder
 update-es-id=org.swissbib.linked.mf.pipe.ESIdUpdate
 lookup-es=org.swissbib.linked.mf.pipe.ESLookup
+index-neo4j=org.swissbib.linked.mf.writer.NeoIndexer
