--- a/pom.xml
+++ b/pom.xml
@@ -128,8 +128,11 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-beta-5</version>
+				<version>2.6</version>
                 <configuration>
+					<descriptors>
+						<descriptor>/src/main/assembly/assembly.xml</descriptor>
+					</descriptors>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -152,12 +155,6 @@
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
 			<version>2.3.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
         </dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
