Adding itemerase-es command.

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -12,3 +12,4 @@ encode-ntriples=org.swissbib.linked.mf.pipe.NtriplesEncoder
 update-es-id=org.swissbib.linked.mf.pipe.ESIdUpdate
 lookup-es=org.swissbib.linked.mf.pipe.ESLookup
 index-neo4j=org.swissbib.linked.mf.writer.NeoIndexer
+itemerase-es=org.swissbib.linked.mf.pipe.ESItemEraser
