--- a/pom.xml
+++ b/pom.xml
@@ -148,13 +148,13 @@
         <dependency>
             <groupId>org.culturegraph</groupId>
             <artifactId>metafacture-core</artifactId>
-            <version>3.3.1</version>
+            <version>3.3.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
