Tools for Neo4j batch uploads.

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -13,3 +13,5 @@ update-es-id=org.swissbib.linked.mf.pipe.ESIdUpdate
 lookup-es=org.swissbib.linked.mf.pipe.ESLookup
 index-neo4j=org.swissbib.linked.mf.writer.NeoIndexer
 itemerase-es=org.swissbib.linked.mf.pipe.ESItemEraser
+write-neo4j=org.swissbib.linked.mf.writer.NeoWriter
+encode-neo4j=org.swissbib.linked.mf.pipe.NeoEncoder
