Classes for decoding JSON files

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -15,3 +15,7 @@ index-neo4j=org.swissbib.linked.mf.writer.NeoIndexer
 itemerase-es=org.swissbib.linked.mf.pipe.ESItemEraser
 write-neo4j=org.swissbib.linked.mf.writer.NeoWriter
 encode-neo4j=org.swissbib.linked.mf.pipe.NeoEncoder
+write-socket=org.swissbib.linked.mf.writer.SocketWriter
+write-kafka=org.swissbib.linked.mf.writer.KafkaWriter
+ext-filter=org.swissbib.linked.mf.pipe.ExtFilter
+read-json=org.swissbib.linked.mf.reader.JsonReader
