Metafacture workflow for creating a dump file aimed at bulk indexing in a Neo4j database

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
             <artifactId>solr-solrj</artifactId>
             <version>5.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.0.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
