--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -19,3 +19,4 @@ write-socket=org.swissbib.linked.mf.writer.SocketWriter
 write-kafka=org.swissbib.linked.mf.writer.KafkaWriter
 ext-filter=org.swissbib.linked.mf.pipe.ExtFilter
 read-json=org.swissbib.linked.mf.reader.JsonReader
+write-csv=org.swissbib.linked.mf.writer.ContinuousCsvWriter
