Adds new flux commds: open-multi-http, handle-marcxml-sru, handle-marcxml-sb

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -20,3 +20,6 @@ write-kafka=org.swissbib.linked.mf.writer.KafkaWriter
 ext-filter=org.swissbib.linked.mf.pipe.ExtFilter
 read-json=org.swissbib.linked.mf.reader.JsonReader
 write-csv=org.swissbib.linked.mf.writer.ContinuousCsvWriter
+open-multi-http=org.swissbib.linked.mf.source.MultiHttpOpener
+handle-marcxml-sru=org.swissbib.linked.mf.decoder.MarcXmlSruHandler
+handle-marcxml-sb=org.swissbib.linked.mf.decoder.MarcXmlSbHandler
