--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -18,7 +18,7 @@ encode-neo4j=org.swissbib.linked.mf.pipe.NeoEncoder
 write-socket=org.swissbib.linked.mf.writer.SocketWriter
 write-kafka=org.swissbib.linked.mf.writer.KafkaWriter
 ext-filter=org.swissbib.linked.mf.pipe.ExtFilter
-read-json=org.swissbib.linked.mf.reader.JsonReader
+decode-json=org.swissbib.linked.mf.decoder.JsonDecoder
 write-csv=org.swissbib.linked.mf.writer.ContinuousCsvWriter
 open-multi-http=org.swissbib.linked.mf.source.MultiHttpOpener
 handle-marcxml-sru=org.swissbib.linked.mf.decoder.MarcXmlSruHandler
