--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -23,3 +23,4 @@ write-csv=org.swissbib.linked.mf.writer.ContinuousCsvWriter
 open-multi-http=org.swissbib.linked.mf.source.MultiHttpOpener
 handle-marcxml-sru=org.swissbib.linked.mf.decoder.MarcXmlSruHandler
 handle-marcxml-sb=org.swissbib.linked.mf.decoder.MarcXmlSbHandler
+read-json-object=org.swissbib.linked.mf.io.JsonObjectReader
