Adds a command for reading in Kafka messages.

--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -24,3 +24,4 @@ open-multi-http=org.swissbib.linked.mf.source.MultiHttpOpener
 handle-marcxml-sru=org.swissbib.linked.mf.decoder.MarcXmlSruHandler
 handle-marcxml-sb=org.swissbib.linked.mf.decoder.MarcXmlSbHandler
 read-json-object=org.swissbib.linked.mf.io.JsonObjectReader
+read-kafka=org.swissbib.linked.mf.source.MfKafkaConsumer
