additional notes related to gradle and minor modification in gradle build file

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'java-library-distribution'
+apply plugin: 'distribution'
+
 
 
 group = 'ch.linked-swissbib'
