--- a/pom.xml
+++ b/pom.xml
@@ -289,7 +289,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-checkstyle-plugin</artifactId>
-                        <version>2.17</version>
+                        <version>3.0.0</version>
                         <configuration>
                             <configLocation>${basedir}/quality_assurance/checkstyle_rules.xml</configLocation>
                             <propertyExpansion>basedir=${basedir}</propertyExpansion>
@@ -327,7 +327,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
-                        <version>3.0.4</version>
+                        <version>3.0.5</version>
                         <configuration>
                             <threshold>High</threshold>
                             <failOnError>false</failOnError>
@@ -346,7 +346,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-pmd-plugin</artifactId>
-                        <version>3.8</version>
+                        <version>3.9.0</version>
                         <configuration>
                             <linkXRef>true</linkXRef>
                             <rulesets>
@@ -362,6 +362,24 @@
                             </execution>
                         </executions>
                     </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <configuration>
+                            <minimizeJar>true</minimizeJar>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                 </plugins>
             </build>
         </profile>
