--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ integrate_sb_commands:
   script:
   - wget https://github.com/metafacture/metafacture-core/releases/download/metafacture-core-5.0.0/metafacture-core-5.0.0-dist.tar.gz
   - tar xzf metafacture-core-5.0.0-dist.tar.gz
-  - cp swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
+  - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
 
 # e2e_tests:
 #   stage: test
