--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,10 +19,10 @@ build_sb_commands:
   - export GRADLE_USER_HOME=`pwd`/.gradle
   script:
   - ./gradlew shadowJar
-#  artifacts:
-#    paths:
-#    - build/libs/*.jar
-#    expire_in: 1 week
+  artifacts:
+    paths:
+    - build/libs/*.jar
+    expire_in: 1 day
 
 
 integrate_sb_commands:
@@ -35,6 +35,10 @@ integrate_sb_commands:
   - wget https://github.com/metafacture/metafacture-core/releases/download/metafacture-core-5.0.0/metafacture-core-5.0.0-dist.tar.gz
   - tar xzf metafacture-core-5.0.0-dist.tar.gz
   - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
+  artifacts:
+    paths:
+    - metafacture-core-5.0.0-dist
+    expire_in: 1 day
 
 
 # e2e_tests:
