Include integration test step in .gitlab-ci.yml
Signed-off-by: Sebastian Schüpbach <sebastian.schuepbach@unibas.ch>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build_sb_commands:
   before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
   script:
-  - ./gradlew shadowJar
+  - ./gradlew integrationTest shadowJar
   artifacts:
     paths:
     - build/libs/*.jar
