--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,10 +37,10 @@ integrate_sb_commands:
   - tar xzf metafacture-core-5.0.0-dist.tar.gz
   - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
   - cd e2e/baseLineResource
-  - ../metafacture-core-5.0.0-dist/flux.sh resource.flux
+  - ../../metafacture-core-5.0.0-dist/flux.sh resource.flux
   - diff -q *.jsonld
   after_script:
-  - cd ..
+  - cd ../..
   - rm -r e2e
   artifacts:
     paths:
