Install additional packages
Signed-off-by: Sebastian Schüpbach <sebastian.schuepbach@unibas.ch>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ integrate_sb_commands:
   image: archlinux/base:latest
   before_script:
   - pacman -Syy
-  - pacman -S --noconfirm wget tar
+  - pacman -S --noconfirm wget tar grep jre8-openjdk-headless
   - mkdir e2e
   - cp -r .e2e/baseLineResource e2e
   script:
@@ -37,10 +37,9 @@ integrate_sb_commands:
   - tar xzf metafacture-core-5.0.0-dist.tar.gz
   - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
   - cd e2e/baseLineResource
-  - ../../metafacture-core-5.0.0-dist/flux.sh resource.flux
+  - bash ../../metafacture-core-5.0.0-dist/flux.sh resource.flux
   - diff -q *.jsonld
   after_script:
-  - cd ../..
   - rm -r e2e
   artifacts:
     paths:
