Fix name of diffutils
Signed-off-by: Sebastian Schüpbach <sebastian.schuepbach@unibas.ch>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ integrate_sb_commands:
   image: archlinux/base:latest
   before_script:
   - pacman -Syy
-  - pacman -S --noconfirm wget tar grep jre8-openjdk-headless diff
+  - pacman -S --noconfirm wget tar grep jre8-openjdk-headless diffutils
   - mkdir e2e
   - cp -r .e2e/baseLineResource e2e
   script:
@@ -39,8 +39,6 @@ integrate_sb_commands:
   - cd e2e/baseLineResource
   - bash ../../metafacture-core-5.0.0-dist/flux.sh resource.flux
   - diff -q *.jsonld
-  after_script:
-  - rm -r e2e
   artifacts:
     paths:
     - metafacture-core-5.0.0-dist
