--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,9 @@ dependencies {
     compileOnly "org.metafacture:metamorph:${mfVersion}"
     compileOnly "org.slf4j:slf4j-api:1.7.25"
     testCompile "junit:junit:4.12"
-    testCompile ""
+    testCompile "org.mockito:mockito-core:2.18.3"
+    testCompile "com.pholser:junit-quickcheck-core:0.8"
+    testCompile "org.metafacture:metafacture-framework:${mfVersion}"
     integrationTestCompile "org.metafacture:metafacture-biblio:${mfVersion}"
     integrationTestCompile "org.metafacture:metafacture-io:${mfVersion}"
     integrationTestCompile "org.metafacture:metafacture-mangling:${mfVersion}"
