--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build_sb_commands:
   before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
   script:
-  - ./gradlew integrationTest shadowJar
+  - ./gradlew test shadowJar
   artifacts:
     paths:
     - build/libs/*.jar
