Update gitlab-ci workflow and docker image creation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,22 +27,18 @@ build_sb_commands:
 
 integrate_sb_commands:
   stage: integrate
-  image: archlinux/base:latest
+  image: sschuepbach/metafacture-runner:latest
   before_script:
-  - pacman -Syy
-  - pacman -S --noconfirm wget tar grep jre8-openjdk-headless diffutils
   - mkdir e2e
   - cp -r .e2e/baseLineResource e2e
   script:
-  - wget https://github.com/metafacture/metafacture-core/releases/download/metafacture-core-5.0.0/metafacture-core-5.0.0-dist.tar.gz
-  - tar xzf metafacture-core-5.0.0-dist.tar.gz
-  - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar metafacture-core-5.0.0-dist/plugins
+  - cp build/libs/swissbibMF-plugins-$APP_VERSION-all.jar /app/plugins
   - cd e2e/baseLineResource
-  - bash ../../metafacture-core-5.0.0-dist/flux.sh resource.flux
+  - bash /app/flux.sh resource.flux
   - diff -q *.jsonld
   artifacts:
     paths:
-    - metafacture-core-5.0.0-dist
+    - /app
     expire_in: 1 day
 
 deploy_to_docker_hub:
