--- a/src/main/resources/flux-commands.properties
+++ b/src/main/resources/flux-commands.properties
@@ -25,3 +25,4 @@ handle-marcxml-sru=org.swissbib.linked.mf.decoder.MarcXmlSruHandler
 handle-marcxml-sb=org.swissbib.linked.mf.decoder.MarcXmlSbHandler
 read-json-object=org.swissbib.linked.mf.io.JsonObjectReader
 read-kafka=org.swissbib.linked.mf.source.MfKafkaConsumer
+turtle-producer=org.swissbib.linked.mf.pipe.TurtleProducer
